--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,20 +1,10 @@
-<!doctype html>
-<html>
-<head>
- <meta charset="utf-8" />
- <title>#スタバなう</title>
- <style>
- </style>
-</head>
- 
-<body>
-<div style="margin-left:20%;">
-<h1>form (upload)</h1>
-<form method="POST" enctype="multipart/form-data">
- <div><label>File1 <input type="file" name="file1" /></label></div>
- <div><button type="submit">Submit</button></div>
+{% extends "base.html" %}
+{% block content %}
+<form method="post" action="/send" enctype="multipart/form-data">
+  <input type="file" id="img_file" name="img_file" class="col-sm-4">
+  <input type="submit" value="送信" class="btn">
 </form>
-<p>{{ message }}</p>
-</div>
-</body>
-</html>
+  {% if img_url %}
+<p><img src="{{ img_url }}"></p>
+  {% endif %}
+{% endblock %}
