--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,6 +5,7 @@
   <input type="submit" value="送信" class="btn">
 </form>
   {% if img_url %}
-<p><img src="{{ img_url }}"></p>
+<p><img src="{{ img_url }}"></p>    <!---img_urlのpathの画像を表示-->
+<p> {{kekka}} {{per}}<p> 
   {% endif %}
 {% endblock %}
